--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@tanstack/react-query": "^5.24.1",
     "axios": "^1.6.7",
     "flowbite-react": "^0.7.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "sort-by": "^0.0.2"
