--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.18",
     "@tanstack/react-query": "^5.24.1",
     "axios": "^1.6.7",
+    "firebase": "^10.8.0",
     "flowbite-react": "^0.7.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
